update page title

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,10 +5,14 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="Create and manage QR codes for your website links with BOnlineCo's free QR Code Generator. Track and analyze your QR code performance with our easy-to-use platform." />
+    <meta name="keywords" content="QR code generator, create QR code, free QR code, dynamic QR code, URL shortener, website QR code, bOnlineCo, marketing tools, digital marketing, QR code analytics" />
+    <meta name="author" content="BOnlineCo" />
+    <meta property="og:title" content="BOnlineCo QR Code Generator - Create & Track QR Codes" />
+    <meta property="og:description" content="Generate free QR codes for your website links. Track scans and optimize your marketing campaigns with BOnlineCo's QR Code Generator." />
+    <meta property="og:url" content="http://bonlineco.com/" />
+    <meta property="og:type" content="website" />
+    <meta name="robots" content="index, follow" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>BOnlineCo QR Code Generator | Create & Track Free QR Codes</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
